deploy: 93773fa9ee6ed37074de1469c1448379a31a46b3

--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -512,7 +512,7 @@ A convenient option is using Google’s Colaboratory to write the notebooks.</p>
     <div class="container">
       <p>
         
-          By `particula` contributors: https://github.com/particula/particula/graphs/contributors<br/>
+          By particula contributors<br/>
         
             &copy; Copyright 2021.<br/>
       </p>
