--- a/documentation/d000_detailed_documentation.html
+++ b/documentation/d000_detailed_documentation.html
@@ -324,7 +324,7 @@
     <div class="container">
       <p>
         
-          By `particula` contributors: https://github.com/particula/particula/graphs/contributors<br/>
+          By particula contributors<br/>
         
             &copy; Copyright 2021.<br/>
       </p>
