--- a/CODE_OF_CONDUCT.html
+++ b/CODE_OF_CONDUCT.html
@@ -490,7 +490,7 @@ enforcement ladder</a>.</p>
     <div class="container">
       <p>
         
-          By `particula` contributors: https://github.com/particula/particula/graphs/contributors<br/>
+          By particula contributors<br/>
         
             &copy; Copyright 2021.<br/>
       </p>
