--- a/intro.html
+++ b/intro.html
@@ -398,7 +398,7 @@ In general, you should feel free to open and issue or submit a pull request with
     <div class="container">
       <p>
         
-          By `particula` contributors: https://github.com/particula/particula/graphs/contributors<br/>
+          By particula contributors<br/>
         
             &copy; Copyright 2021.<br/>
       </p>
