--- a/documentation/d000_detailed_documentation.html
+++ b/documentation/d000_detailed_documentation.html
@@ -229,7 +229,7 @@
             href="https://github.com/uncscode/particula/issues/new?title=Issue%20on%20page%20%2Fdocumentation/d000_detailed_documentation.html&body=Your%20issue%20content%20here."><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Open an issue"><i class="fas fa-lightbulb"></i>open issue</button></a>
-        <a class="edit-button" href="https://github.com/uncscode/particula/edit/master/docs/documentation/d000_detailed_documentation.md"><button
+        <a class="edit-button" href="https://github.com/uncscode/particula/edit/main/docs/documentation/d000_detailed_documentation.md"><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Edit this page"><i class="fas fa-pencil-alt"></i>suggest edit</button></a>
     </div>
@@ -282,7 +282,7 @@
         requestKernel: true,
         binderOptions: {
             repo: "uncscode/particula",
-            ref: "master",
+            ref: "main",
         },
         codeMirrorConfig: {
             theme: "abcdef",
