--- a/intro.html
+++ b/intro.html
@@ -228,7 +228,7 @@
             href="https://github.com/uncscode/particula/issues/new?title=Issue%20on%20page%20%2Fintro.html&body=Your%20issue%20content%20here."><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Open an issue"><i class="fas fa-lightbulb"></i>open issue</button></a>
-        <a class="edit-button" href="https://github.com/uncscode/particula/edit/master/docs/intro.md"><button
+        <a class="edit-button" href="https://github.com/uncscode/particula/edit/main/docs/intro.md"><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Edit this page"><i class="fas fa-pencil-alt"></i>suggest edit</button></a>
     </div>
@@ -363,7 +363,7 @@ In general, you should feel free to open and issue or submit a pull request with
         requestKernel: true,
         binderOptions: {
             repo: "uncscode/particula",
-            ref: "master",
+            ref: "main",
         },
         codeMirrorConfig: {
             theme: "abcdef",
