--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -229,7 +229,7 @@
             href="https://github.com/uncscode/particula/issues/new?title=Issue%20on%20page%20%2FCONTRIBUTING.html&body=Your%20issue%20content%20here."><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Open an issue"><i class="fas fa-lightbulb"></i>open issue</button></a>
-        <a class="edit-button" href="https://github.com/uncscode/particula/edit/main/docs/CONTRIBUTING.md"><button
+        <a class="edit-button" href="https://github.com/uncscode/particula/edit/v0.0.3/docs/CONTRIBUTING.md"><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Edit this page"><i class="fas fa-pencil-alt"></i>suggest edit</button></a>
     </div>
@@ -470,7 +470,7 @@ A convenient option is using Google’s Colaboratory to write the notebooks.</p>
         requestKernel: true,
         binderOptions: {
             repo: "uncscode/particula",
-            ref: "main",
+            ref: "v0.0.3",
         },
         codeMirrorConfig: {
             theme: "abcdef",
