deploy: 07d879b738a52aa4d094f55705b1bea249a4841c

--- a/documentation/utilities/distribution_discretization.html
+++ b/documentation/utilities/distribution_discretization.html
@@ -515,7 +515,7 @@ NAME
     particula.util.distribution_discretization - discretization of the distribution of the particles
 
 FUNCTIONS
-    discretize(interval=None, disttype=&#39;lognormal&#39;, gsigma=1.25, mode=1e-07, nparticles=100000.0, **kwargs)
+    discretize(interval=None, disttype=&#39;lognormal&#39;, gsigma=array(1.25), mode=&lt;Quantity(1e-07, &#39;meter&#39;)&gt;, nparticles=array(100000.), **kwargs)
         discretize the distribution of the particles
         
         Parameters:
