--- a/documentation/utilities/mean_free_path.html
+++ b/documentation/utilities/mean_free_path.html
@@ -617,7 +617,7 @@ DESCRIPTION
         (likely through a different utility function...)
 
 FUNCTIONS
-    mfp(temperature=&lt;Quantity(298.15, &#39;kelvin&#39;)&gt;, pressure=&lt;Quantity(101325, &#39;pascal&#39;)&gt;, molecular_weight=&lt;Quantity(0.0289644, &#39;kilogram / mole&#39;)&gt;, dynamic_viscosity=None, gas_constant=&lt;Quantity(8.31446262, &#39;kilogram * meter ** 2 / kelvin / mole / second ** 2&#39;)&gt;, **kwargs)
+    mfp(temperature=&lt;Quantity(298.15, &#39;kelvin&#39;)&gt;, pressure=&lt;Quantity(101325, &#39;pascal&#39;)&gt;, molecular_weight=&lt;Quantity(0.0289644, &#39;kilogram / mole&#39;)&gt;, dynamic_viscosity=None, gas_constant=&lt;Quantity(8.31446261815324, &#39;kilogram * meter ** 2 / kelvin / mole / second ** 2&#39;)&gt;, **kwargs)
         Returns the mean free path of in air.
         
         The mean free path is the average distance
@@ -694,7 +694,7 @@ FUNCTIONS
             it overrides the calculated value.
 
 DATA
-    GAS_CONSTANT = &lt;Quantity(8.31446262, &#39;kilogram * meter ** 2 / kelvin /...
+    GAS_CONSTANT = &lt;Quantity(8.31446261815324, &#39;kilogram * meter ** 2 / ke...
     MOLECULAR_WEIGHT_AIR = &lt;Quantity(0.0289644, &#39;kilogram / mole&#39;)&gt;
     u = &lt;pint.registry.UnitRegistry object&gt;
 
