deploy: e650506da38e6cba9dafef68d186e6a8fb599913

--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -424,7 +424,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/uncscode/particula/edit/main/docs/CONTRIBUTING.md"
+        <a href="https://github.com/uncscode/particula/edit/v0.0.10/docs/CONTRIBUTING.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -810,7 +810,7 @@ A convenient option is using Google’s Colaboratory to write the notebooks.</p>
         requestKernel: true,
         binderOptions: {
             repo: "uncscode/particula",
-            ref: "main",
+            ref: "v0.0.10",
         },
         codeMirrorConfig: {
             theme: "abcdef",
