--- a/documentation/utilities/knudsen_number.html
+++ b/documentation/utilities/knudsen_number.html
@@ -424,7 +424,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/uncscode/particula/edit/main/docs/documentation/utilities/knudsen_number.ipynb"
+        <a href="https://github.com/uncscode/particula/edit/v0.0.10/docs/documentation/utilities/knudsen_number.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -679,7 +679,7 @@ def knu(
         requestKernel: true,
         binderOptions: {
             repo: "uncscode/particula",
-            ref: "main",
+            ref: "v0.0.10",
         },
         codeMirrorConfig: {
             theme: "abcdef",
