--- a/CODE_OF_CONDUCT.html
+++ b/CODE_OF_CONDUCT.html
@@ -423,7 +423,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/uncscode/particula/edit/main/docs/CODE_OF_CONDUCT.md"
+        <a href="https://github.com/uncscode/particula/edit/v0.0.10/docs/CODE_OF_CONDUCT.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -779,7 +779,7 @@ enforcement ladder</a>.</p>
         requestKernel: true,
         binderOptions: {
             repo: "uncscode/particula",
-            ref: "main",
+            ref: "v0.0.10",
         },
         codeMirrorConfig: {
             theme: "abcdef",
