--- a/documentation/intro.html
+++ b/documentation/intro.html
@@ -374,7 +374,7 @@ title="Toggle navigation"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://mybinder.org/v2/gh/uncscode/particula/main?urlpath=lab/tree/docs/documentation/intro.ipynb"
+        <a href="https://mybinder.org/v2/gh/uncscode/particula/v0.0.10?urlpath=lab/tree/docs/documentation/intro.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -392,7 +392,7 @@ title="Launch on Binder"
       </li>
       
       <li>
-        <a href="https://colab.research.google.com/github/uncscode/particula/blob/main/docs/documentation/intro.ipynb"
+        <a href="https://colab.research.google.com/github/uncscode/particula/blob/v0.0.10/docs/documentation/intro.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -487,7 +487,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/uncscode/particula/edit/main/docs/documentation/intro.ipynb"
+        <a href="https://github.com/uncscode/particula/edit/v0.0.10/docs/documentation/intro.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -585,7 +585,7 @@ title="Print to PDF"
         requestKernel: true,
         binderOptions: {
             repo: "uncscode/particula",
-            ref: "main",
+            ref: "v0.0.10",
         },
         codeMirrorConfig: {
             theme: "abcdef",
