--- a/documentation/utilities/mean_free_path.html
+++ b/documentation/utilities/mean_free_path.html
@@ -378,7 +378,7 @@ title="Toggle navigation"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://mybinder.org/v2/gh/uncscode/particula/main?urlpath=lab/tree/docs/documentation/utilities/mean_free_path.ipynb"
+        <a href="https://mybinder.org/v2/gh/uncscode/particula/v0.0.10?urlpath=lab/tree/docs/documentation/utilities/mean_free_path.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -396,7 +396,7 @@ title="Launch on Binder"
       </li>
       
       <li>
-        <a href="https://colab.research.google.com/github/uncscode/particula/blob/main/docs/documentation/utilities/mean_free_path.ipynb"
+        <a href="https://colab.research.google.com/github/uncscode/particula/blob/v0.0.10/docs/documentation/utilities/mean_free_path.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -491,7 +491,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/uncscode/particula/edit/main/docs/documentation/utilities/mean_free_path.ipynb"
+        <a href="https://github.com/uncscode/particula/edit/v0.0.10/docs/documentation/utilities/mean_free_path.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -865,7 +865,7 @@ def mfp(
         requestKernel: true,
         binderOptions: {
             repo: "uncscode/particula",
-            ref: "main",
+            ref: "v0.0.10",
         },
         codeMirrorConfig: {
             theme: "abcdef",
