--- a/documentation/utilities/particle_mass.html
+++ b/documentation/utilities/particle_mass.html
@@ -376,7 +376,7 @@ title="Toggle navigation"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://mybinder.org/v2/gh/uncscode/particula/main?urlpath=lab/tree/docs/documentation/utilities/particle_mass.ipynb"
+        <a href="https://mybinder.org/v2/gh/uncscode/particula/v0.0.10?urlpath=lab/tree/docs/documentation/utilities/particle_mass.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -394,7 +394,7 @@ title="Launch on Binder"
       </li>
       
       <li>
-        <a href="https://colab.research.google.com/github/uncscode/particula/blob/main/docs/documentation/utilities/particle_mass.ipynb"
+        <a href="https://colab.research.google.com/github/uncscode/particula/blob/v0.0.10/docs/documentation/utilities/particle_mass.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -489,7 +489,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/uncscode/particula/edit/main/docs/documentation/utilities/particle_mass.ipynb"
+        <a href="https://github.com/uncscode/particula/edit/v0.0.10/docs/documentation/utilities/particle_mass.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -698,7 +698,7 @@ def mass(
         requestKernel: true,
         binderOptions: {
             repo: "uncscode/particula",
-            ref: "main",
+            ref: "v0.0.10",
         },
         codeMirrorConfig: {
             theme: "abcdef",
