--- a/intro.html
+++ b/intro.html
@@ -423,7 +423,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/uncscode/particula/edit/main/docs/intro.md"
+        <a href="https://github.com/uncscode/particula/edit/v0.0.10/docs/intro.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -634,7 +634,7 @@ However, feel free to reach out with any questions or comments!</p>
         requestKernel: true,
         binderOptions: {
             repo: "uncscode/particula",
-            ref: "main",
+            ref: "v0.0.10",
         },
         codeMirrorConfig: {
             theme: "abcdef",
