--- a/examples/loading_data_part3.html
+++ b/examples/loading_data_part3.html
@@ -930,7 +930,7 @@ Stream(header=[&#39;20.72&#39;, &#39;21.10&#39;, &#39;21.48&#39;, &#39;21.87&#39
 </div>
 </div>
 <div class="cell_output docutils container">
-<img alt="../_images/7964d36307d84639038406fa46b33affe3269ca168948a2fca361651e633ab05.png" src="../_images/7964d36307d84639038406fa46b33affe3269ca168948a2fca361651e633ab05.png" />
+<img alt="../_images/b5246f0b17509a7560854cfd7c7178093232f74160c33dfe4c310a619f314663.png" src="../_images/b5246f0b17509a7560854cfd7c7178093232f74160c33dfe4c310a619f314663.png" />
 </div>
 </div>
 </section>
@@ -993,7 +993,7 @@ which operates on stream objects.</p>
 </div>
 </div>
 <div class="cell_output docutils container">
-<img alt="../_images/db4fbead22a5d8816617ee11c638a87299164efbbb058123bfbc4a9f5cdf9993.png" src="../_images/db4fbead22a5d8816617ee11c638a87299164efbbb058123bfbc4a9f5cdf9993.png" />
+<img alt="../_images/5daa650e1646e469a5abc98404f11c124ed0271f5d5689a7d36b86505bc50d23.png" src="../_images/5daa650e1646e469a5abc98404f11c124ed0271f5d5689a7d36b86505bc50d23.png" />
 </div>
 </div>
 </section>
@@ -1065,7 +1065,7 @@ class Lake(builtins.object)
  |  add_stream(self, stream: particula.data.stream.Stream, name: str) -&gt; None
  |      Add a stream to the lake.
  |      
- |      Parameters:
+ |      Args:
  |      -----------
  |          stream (Stream): The stream object to be added.
  |          name (str): The name of the stream.
