Deploy preview for PR 404 🛫

--- a/pr-preview/pr-404/examples/chamber_smps_data.html
+++ b/pr-preview/pr-404/examples/chamber_smps_data.html
@@ -851,7 +851,7 @@ Length of stream after crop: 321
     <span class="n">stream_smps_2d</span><span class="o">.</span><span class="n">data</span><span class="p">,</span>
     <span class="n">cmap</span><span class="o">=</span><span class="n">plt</span><span class="o">.</span><span class="n">cm</span><span class="o">.</span><span class="n">PuBu_r</span><span class="p">,</span> <span class="n">levels</span><span class="o">=</span><span class="mi">50</span><span class="p">)</span>
 <span class="n">plt</span><span class="o">.</span><span class="n">yscale</span><span class="p">(</span><span class="s1">&#39;log&#39;</span><span class="p">)</span>
-<span class="n">ax</span><span class="o">.</span><span class="n">set_xlabel</span><span class="p">(</span><span class="s1">&#39;Epoch Time&#39;</span><span class="p">)</span>
+<span class="n">ax</span><span class="o">.</span><span class="n">set_xlabel</span><span class="p">(</span><span class="s1">&#39;Experiment time (hours)&#39;</span><span class="p">)</span>
 <span class="n">ax</span><span class="o">.</span><span class="n">set_ylabel</span><span class="p">(</span><span class="s1">&#39;Diameter (nm)&#39;</span><span class="p">)</span>
 <span class="n">plt</span><span class="o">.</span><span class="n">colorbar</span><span class="p">(</span><span class="n">label</span><span class="o">=</span><span class="s1">&#39;Concentration dN [#/cm3]&#39;</span><span class="p">,</span> <span class="n">ax</span><span class="o">=</span><span class="n">ax</span><span class="p">)</span>
 <span class="n">plt</span><span class="o">.</span><span class="n">show</span><span class="p">()</span>
@@ -859,7 +859,7 @@ Length of stream after crop: 321
 </div>
 </div>
 <div class="cell_output docutils container">
-<img alt="../_images/5c0feb66a4c926b7adcd938864dd1e62e33fdcb4fe7e5cb712ec5564bf5bdd03.png" src="../_images/5c0feb66a4c926b7adcd938864dd1e62e33fdcb4fe7e5cb712ec5564bf5bdd03.png" />
+<img alt="../_images/f80cae09196f1e154491194b19519e01ae4ab05044c9b8319770168e3b24be66.png" src="../_images/f80cae09196f1e154491194b19519e01ae4ab05044c9b8319770168e3b24be66.png" />
 </div>
 </div>
 </section>
