Deploy preview for PR 445 🛫

--- a/pr-preview/pr-445/documentation/next/next_particle.html
+++ b/pr-preview/pr-445/documentation/next/next_particle.html
@@ -662,7 +662,7 @@ document.write(`
 <span class="g g-Whitespace">     </span><span class="mi">27</span> <span class="c1"># Accessing calculated properties</span>
 <span class="g g-Whitespace">     </span><span class="mi">28</span> <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Mass of particles:&quot;</span><span class="p">,</span> <span class="n">particle</span><span class="o">.</span><span class="n">get_mass</span><span class="p">())</span>
 
-<span class="ne">TypeError</span>: Particle.__init__() missing 1 required positional argument: &#39;activity&#39;
+<span class="ne">TypeError</span>: Particle.__init__() missing 2 required positional arguments: &#39;activity&#39; and &#39;surface&#39;
 </pre></div>
 </div>
 </div>
