--- a/pr-preview/pr-445/documentation/utilities/mean_free_path.html
+++ b/pr-preview/pr-445/documentation/utilities/mean_free_path.html
@@ -721,7 +721,6 @@ FUNCTIONS
         - https://en.wikipedia.org/wiki/Mean_free_path
 
 DATA
-    BOLTZMANN_CONSTANT = &lt;Quantity(1.380649e-23, &#39;kilogram * meter ** 2 / ...
     GAS_CONSTANT = &lt;Quantity(8.31446261815324, &#39;kilogram * meter ** 2 / ke...
     MOLECULAR_WEIGHT_AIR = &lt;Quantity(0.0289644, &#39;kilogram / mole&#39;)&gt;
     NDArray = numpy.ndarray[typing.Any, numpy.dtype[+_ScalarType_co]]
@@ -790,7 +789,7 @@ from numpy.typing import NDArray
 import numpy as np
 from particula import u
 from particula.constants import (
-    GAS_CONSTANT, MOLECULAR_WEIGHT_AIR, BOLTZMANN_CONSTANT)
+    GAS_CONSTANT, MOLECULAR_WEIGHT_AIR)
 from particula.util.dynamic_viscosity import dyn_vis
 from particula.util.input_handling import (in_gas_constant,
                                            in_molecular_weight, in_pressure,
