--- a/pr-preview/pr-445/documentation/utilities/mean_free_path.html
+++ b/pr-preview/pr-445/documentation/utilities/mean_free_path.html
@@ -720,7 +720,6 @@ FUNCTIONS
         
         References:
         ----------
-        ask Naser where the 2/8 term came it is the same as root(2)
         - https://en.wikipedia.org/wiki/Mean_free_path
 
 DATA
@@ -931,16 +930,22 @@ def molecule_mean_free_path(
 
     References:
     ----------
-    ask Naser where the 2/8 term came it is the same as root(2)
     - https://en.wikipedia.org/wiki/Mean_free_path
     &quot;&quot;&quot;
+    # check inputs are positive
+    if temperature &lt;= 0:
+        raise ValueError(&quot;Temperature must be positive [Kelvin]&quot;)
+    if pressure &lt;= 0:
+        raise ValueError(&quot;Pressure must be positive [Pascal]&quot;)
+    if np.any(molar_mass &lt;= 0):
+        raise ValueError(&quot;Molar mass must be positive [kg/mol]&quot;)
     if dynamic_viscosity is None:
         dynamic_viscosity = dyn_vis(temperature)  # type: ignore
+        dynamic_viscosity = float(dynamic_viscosity.m)  # type: ignore
 
     return np.array(
-        (dynamic_viscosity.m / pressure)  # type: ignore
-        * ((np.pi * GAS_CONSTANT.m * temperature)
-           / (2 * molar_mass))**0.5,
+        (2 * dynamic_viscosity / pressure)
+        / (8 * molar_mass / (np.pi * GAS_CONSTANT.m * temperature))**0.5,
         dtype=np.float_)
 </pre></div>
 </div>
